--- a/cotizador_acerta/templates/activate_account.html
+++ b/cotizador_acerta/templates/activate_account.html
@@ -70,7 +70,7 @@
                 <div class="box box-danger">
                     <div class="box-header with-border">
                         <h1 id="titulo-login" class="text-center"><strong>TU CUENTA HA SIDO ACTIVADA!</strong></h1>
-                        <h5 class="text-center"> Ahora elije una nueva contraseña </h5>
+                        <h5 class="text-center"> Ahora introduce tu contraseña </h5>
                     </div>
                     <div class="box-body">
                         <div class="col-md-1"></div>
