--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -132,7 +132,7 @@
 <div id="navbar">
     <ul class="nav navbar-nav menu hidden-xs">
         <li>
-            <a href="{% url 'login' %}" style="border-bottom:none"><span><img src="{% static 'img/AcertaSeguros.png' %}"> &nbsp;</span></a>
+            <a href="{% url 'login' %}" style="border-bottom:none"><span><img src="{% static 'img/logo_darien.png' %}" style="width:50%;"> &nbsp;</span></a>
         </li>
         {% if user.is_authenticated %}
         <li style="float: right;">
@@ -207,6 +207,6 @@
 <style type="text/css">
   .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
       background-color: #eee;
-      border-color: #E76C42;
+      border-color: #7587FC;
   }
 </style>
