--- a/cotizador_acerta/static/css/navbar.css
+++ b/cotizador_acerta/static/css/navbar.css
@@ -12,8 +12,8 @@
 
 .nav li a:hover{
     background: transparent;
-    color: #E76C42;
-    border-bottom: 5px solid #E76C42;
+    color: #7587FC;
+    border-bottom: 5px solid #7587FC;
 }
 
 .menu li a{
@@ -39,7 +39,7 @@
     background: #F3F3F3;
     width: 100%;
     padding-left: 4.5%;
-    border-bottom: 6px solid #E76C42;
+    border-bottom: 6px solid #7587FC;
 }
 
 #navbar{
