--- a/cotizador_acerta/static/css/hamburger.css
+++ b/cotizador_acerta/static/css/hamburger.css
@@ -3,11 +3,11 @@ header {
   padding: 32px 5px;
   position: relative;
   z-index: 2;
-  border-bottom: 8px solid #E76C42;
+  border-bottom: 8px solid #7587FC;
 }
 
 .navbar-fixed-top {
-  border-bottom: 8px solid #E76C42;
+  border-bottom: 8px solid #7587FC;
   z-index: 2;
 }
 
