--- a/cotizador_acerta/static/css/sidemenu.css
+++ b/cotizador_acerta/static/css/sidemenu.css
@@ -137,7 +137,7 @@
 
 
 .sm-title {
-    background: #E76C42;
+    background: #7587FC;
     color: #FFF;
     font-size: 2em;
     font-weight: 300;
@@ -158,7 +158,7 @@
     content: "»";
     right: 0;
     font-size: 1.7em;
-    color: #E76C42;
+    color: #7587FC;
     top: 0;
     font-family: arial;
     line-height: 1;
@@ -233,7 +233,7 @@
 /* NEXT CODE ONLY FOR DEMO EXAMPLE! */
 
 .sm-item-useraccount {
-    background: #E76C42;
+    background: #7587FC;
     color: #FFF;
     font-size: 2em;
     font-weight: 300;
@@ -256,21 +256,21 @@
 
 
 .fb:hover {
-    background-color: #E76C42;
+    background-color: #7587FC;
     color: #FFF;
 }
 
 .tw:hover {
-    background-color: #E76C42;
+    background-color: #7587FC;
     color: #FFF;
 }
 
 .gp:hover {
-    background-color: #E76C42;
+    background-color: #7587FC;
     color: #FFF;
 }
 
 .pin:hover {
-    background-color: #E76C42;
+    background-color: #7587FC;
     color: #FFF;
 }
