--- a/cotizador_acerta/templates/cotizar/email.html
+++ b/cotizador_acerta/templates/cotizar/email.html
@@ -358,42 +358,42 @@
 					                                <td style="text-align: left;">Lesiones Corporales</td>
 					                                <td style="text-align: right;">{{ cotizacion.lesiones_corporales }}</td>
 					                                <td></td>
-					                                <td style="text-align: right;">{{ prima_lesiones|floatformat:2 }}</td>
+					                                <td style="text-align: right;">{{ prima_lesiones }}</td>
 					                              </tr>
 					                              <tr>
 					                                <td style="text-align: left;">Daños a la Propiedad Ajena</td>
 					                                <td style="text-align: right;">{{ cotizacion.danios_propiedad }}</td>
 					                                <td></td>
-					                                <td style="text-align: right;">{{ prima_daniosProp|floatformat:2 }}</td>
+					                                <td style="text-align: right;">{{ prima_daniosProp }}</td>
 					                              </tr>
 					                              <tr>
 					                                <td style="text-align: left;">Gastos Médicos por Accidente</td>
 					                                <td style="text-align: right;">{{ cotizacion.gastos_medicos }}</td>
 					                                <td></td>
-					                                <td style="text-align: right;">{{ prima_gastosMedicos|floatformat:2 }}</td>
+					                                <td style="text-align: right;">{{ prima_gastosMedicos }}</td>
 					                              </tr>
 					                              <tr>
 					                                <td style="text-align: left;">Colisión y Vuelco</td>
-					                                <td style="text-align: right;">{{ valor_vehiculo|floatformat:2 }}</td>
-					                                <td style="text-align: right;">{{ colision_vuelco|floatformat:2 }}</td>
-					                                <td style="text-align: right;">{{ prima_colisionVuelco|floatformat:2 }}</td>
+					                                <td style="text-align: right;">{{ valor_vehiculo }}</td>
+					                                <td style="text-align: right;">{{ colision_vuelco }}</td>
+					                                <td style="text-align: right;">{{ prima_colisionVuelco }}</td>
 					                              </tr>
 					                              <tr>
 					                                <td style="text-align: left;">Otros Daños</td>
-					                                <td style="text-align: right;">{{ valor_vehiculo|floatformat:2 }}</td>
-					                                <td style="text-align: right;">{{ otros_danios|floatformat:2 }}</td>
-					                                <td style="text-align: right;">{{ prima_otrosDanios|floatformat:2 }}</td>
+					                                <td style="text-align: right;">{{ valor_vehiculo }}</td>
+					                                <td style="text-align: right;">{{ otros_danios }}</td>
+					                                <td style="text-align: right;">{{ prima_otrosDanios }}</td>
 					                              </tr>
 					                              <tr>
 					                                <td style="text-align: left;">Incendio y Rayo</td>
-					                                <td style="text-align: right;">{{ valor_vehiculo|floatformat:2 }}</td>
-					                                <td style="text-align: right;">{{ incendio_rayo|floatformat:2 }}</td>
+					                                <td style="text-align: right;">{{ valor_vehiculo }}</td>
+					                                <td style="text-align: right;">{{ incendio_rayo }}</td>
 					                                <td>-</td>
 					                              </tr>
 					                              <tr>
 					                                <td style="text-align: left;">Robo y Hurto</td>
-					                                <td style="text-align: right;">{{ valor_vehiculo|floatformat:2 }}</td>
-					                                <td style="text-align: right;">{{ robo_hurto|floatformat:2 }}</td>
+					                                <td style="text-align: right;">{{ valor_vehiculo }}</td>
+					                                <td style="text-align: right;">{{ robo_hurto }}</td>
 					                                <td>-</td>
 					                              </tr>
 					                              <tr>
