--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -149,7 +149,10 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-2">
+              <img src="{% static 'img/melissa_acerta_300x130_1.png' %}" style="position: absolute; float: right; z-index: -1; top: 520px; left: 60px;" class="hidden-xs hidden-sm">
+              <img src="{% static 'img/carro_acerta_300x130.png' %}" width="230" style="position: absolute; z-index: -2; top: 680px; left:10px;" class="hidden-xs hidden-sm">
+            </div>
             <div class="col-md-8 col-xs-12">
                 <div class="box">
                 <!-- <div class="box-header">
